--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,17 @@ New in this Isabelle version
 (intermediate legacy feature in Isabelle2015).  INCOMPATIBILITY.
 
 
+*** Pure ***
+
+* Abbreviations in type classes now carry proper sort constraint.
+Rare INCOMPATIBILITY in situations where the previous misbehaviour
+has been exploited previously.
+
+* Refinement of user-space type system in type classes: pseudo-local
+operations behave more similar to abbreviations.  Potential
+INCOMPATIBILITY in exotic situations.
+
+
 *** HOL ***
 
 * Discontinued simp_legacy_precond. Potential INCOMPATIBILITY.
