--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,7 @@ New in this Isabelle version
 *** Pure ***
 
 * Isar command 'obtain' binds term abbreviations (via 'is' patterns) in
-the proof body as well, abstracted over the hypothetical parameters.
+the proof body as well, abstracted over relevant parameters.
 
 * New Isar command 'supply' supports fact definitions during goal
 refinement ('apply' scripts).
