--- a/src/Doc/Isar_Ref/document/root.tex
+++ b/src/Doc/Isar_Ref/document/root.tex
@@ -74,6 +74,7 @@
 \input{Document_Preparation.tex}
 \input{Spec.tex}
 \input{Proof.tex}
+\input{Proof_Script.tex}
 \input{Inner_Syntax.tex}
 \input{Misc.tex}
 \input{Generic.tex}
