--- a/NEWS
+++ b/NEWS
@@ -20,7 +20,8 @@ statements: result is abstracted over unknowns.
 
 * Local goals ('have', 'show', 'hence', 'thus') allow structured
 statements like fixes/assumes/shows in theorem specifications, but the
-notation is postfix with keywords 'if' and 'for'. For example:
+notation is postfix with keywords 'if' (or 'when') and 'for'. For
+example:
 
   have result: "C x y"
     if "A x" and "B y"
@@ -37,6 +38,9 @@ corresponds to a raw proof block like this:
     have "C x y" <proof>
   }
   note result = this
+
+The keyword 'when' may be used instead of 'if', to indicate 'presume'
+instead of 'assume' above.
 
 * New command 'supply' supports fact definitions during goal refinement
 ('apply' scripts).
