--- a/src/Doc/Sledgehammer/document/root.tex
+++ b/src/Doc/Sledgehammer/document/root.tex
@@ -266,14 +266,14 @@ Try this: \textbf{by} (\textit{metis last\_ConsL}) (64 ms). \\[3\smallskipamount
 Sledgehammer: ``\textit{z3\/}'' \\
 Try this: \textbf{by} (\textit{metis list.inject}) (20 ms). \\[3\smallskipamount]
 %
-Sledgehammer: ``\textit{remote\_vampire\/}'' \\
-Try this: \textbf{by} (\textit{metis hd.simps}) (14 ms). \\[3\smallskipamount]
-%
 Sledgehammer: ``\textit{spass\/}'' \\
 Try this: \textbf{by} (\textit{metis list.inject}) (17 ms). \\[3\smallskipamount]
+%
+Sledgehammer: ``\textit{e\/}'' \\
+Try this: \textbf{by} (\textit{metis hd.simps}) (14 ms). \\[3\smallskipamount]
 \postw
 
-Sledgehammer ran CVC4, SPASS, Vampire, and Z3 in parallel. Depending on which
+Sledgehammer ran CVC4, E, SPASS, and Z3 in parallel. Depending on which
 provers are installed and how many processor cores are available, some of the
 provers might be missing or present with a \textit{remote\_} prefix.
 
