simplified Thm.instantiate and derivatives: the LHS refers to non-certified variables -- this merely serves as index into already certified structures (or is ignored);

--- a/NEWS
+++ b/NEWS
@@ -234,6 +234,12 @@ not available during instantiation.
 command. Minor INCOMPATIBILITY, use 'function' instead.
 
 
+** ML **
+
+* Thm.instantiate (and derivatives) no longer require the LHS of the
+instantiation to be certified: plain variables are given directly.
+
+
 
 New in Isabelle2015 (May 2015)
 ------------------------------
