more documentation of coercions

--- a/src/Doc/Isar_Ref/document/root.tex
+++ b/src/Doc/Isar_Ref/document/root.tex
@@ -45,8 +45,9 @@
   Lars Noschinski,
   David von Oheimb, \\
   Larry Paulson,
-  Sebastian Skalberg,
-  Christian Sternagel
+  Sebastian Skalberg, \\
+  Christian Sternagel,
+  Dmitriy Traytel
 }
 
 \makeindex
