--- a/lib/scripts/run-polyml-5.5.3
+++ b/lib/scripts/run-polyml-5.5.3
@@ -40,6 +40,17 @@ librarypath "$ML_HOME"
 
 ## prepare databases
 
+case "$ML_PLATFORM" in
+  *-windows)
+    PLATFORM_INFILE="$(jvmpath -m "$INFILE")"
+    PLATFORM_OUTFILE="$(jvmpath -m "$OUTFILE")"
+    ;;
+  *)
+    PLATFORM_INFILE="$INFILE"
+    PLATFORM_OUTFILE="$OUTFILE"
+    ;;
+esac
+
 if [ -z "$INFILE" ]; then
   INIT=""
   case "$ML_PLATFORM" in
@@ -52,14 +63,6 @@ if [ -z "$INFILE" ]; then
   esac
 else
   check_file "$INFILE"
-  case "$ML_PLATFORM" in
-    *-windows)
-      PLATFORM_INFILE="$(jvmpath -m "$INFILE")"
-      ;;
-    *)
-      PLATFORM_INFILE="$INFILE"
-      ;;
-  esac
   INIT="(Signal.signal (2, Signal.SIG_HANDLE (fn _ => Process.interruptConsoleProcesses ())); PolyML.SaveState.loadState \"$PLATFORM_INFILE\" handle exn => (TextIO.output (TextIO.stdErr, General.exnMessage exn ^ \": $INFILE\\n\"); OS.Process.exit OS.Process.success));"
   EXIT=""
 fi
@@ -68,7 +71,7 @@ if [ -z "$OUTFILE" ]; then
   MLEXIT=""
 else
   if [ -z "$INFILE" ]; then
-    MLEXIT="(PolyML.shareCommonData PolyML.rootFunction; TextIO.output (TextIO.stdOut, \"Exporting $OUTFILE\n\"); PolyML.SaveState.saveState \"$OUTFILE\"; true) handle exn => (TextIO.output (TextIO.stdErr, General.exnMessage exn ^ \": $OUTFILE\\n\"); OS.Process.exit OS.Process.success);"
+    MLEXIT="(PolyML.shareCommonData PolyML.rootFunction; TextIO.output (TextIO.stdOut, \"Exporting $OUTFILE\n\"); PolyML.SaveState.saveState \"$PLATFORM_OUTFILE\"; true) handle exn => (TextIO.output (TextIO.stdErr, General.exnMessage exn ^ \": $OUTFILE\\n\"); OS.Process.exit OS.Process.success);"
   else
     MLEXIT="Session.save \"$OUTFILE\";"
   fi
