--- a/Admin/polyml/README
+++ b/Admin/polyml/README
@@ -1,12 +1,8 @@
 Poly/ML for Isabelle
 ====================
 
-This compilation of Poly/ML 5.5.2 is based on
-http://sourceforge.net/p/polyml/code/HEAD/tree/fixes-5.5.2 version
-2009.  See also fixes-5.5.2.diff for the differences to the official
-source distribution polyml.5.5.2.tar.gz from
-http://sourceforge.net/projects/polyml/.
-
+This is a preview of Poly/ML 5.5.3, based on
+https://github.com/polyml/polyml/commit/3fbfb80c471f
 
 The included build script is used like this:
 
@@ -14,11 +10,11 @@ The included build script is used like this:
   ./build src x86_64-linux --with-gmp
   ./build src x86-darwin --without-gmp
   ./build src x86_64-darwin --without-gmp
-  ./build src x86-cygwin --with-gmp
+  ./build src x86-windows --with-gmp
 
 Also note that the separate "sha1" library module is required for
 efficient digesting of strings according to SHA-1.
 
 
         Makarius
-        22-Apr-2015
+        20-Aug-2015
