--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,15 @@ New in this Isabelle version
 * Improved scheduling for urgent print tasks (e.g. command state output,
 interactive queries) wrt. long-running background tasks.
 
+* IDE support the the source-level debugger of Poly/ML, to work with
+Isabelle/ML and official Standard ML. Configuration option "ML_debugger"
+and commands 'ML_file_debug', 'ML_file_no_debug', 'SML_file_debug',
+'SML_file_no_debug' control compilation of sources with debugging
+information. The Debugger panel allows to set breakpoints (via context
+menu), step through stopped threads, evaluate local ML expressions etc.
+At least one Debugger view needs to be active to have any effect on the
+running ML program.
+
 
 *** Isar ***
 
