--- a/Admin/polyml/README
+++ b/Admin/polyml/README
@@ -2,7 +2,7 @@ Poly/ML for Isabelle
 ====================
 
 This is a preview of Poly/ML 5.5.3, based on
-https://github.com/polyml/polyml/commit/3fbfb80c471f
+https://github.com/polyml/polyml/
 
 The included build script is used like this:
 
@@ -11,10 +11,11 @@ The included build script is used like this:
   ./build src x86-darwin --without-gmp
   ./build src x86_64-darwin --without-gmp
   ./build src x86-windows --with-gmp
+  ./build src x86_64-windows --with-gmp
 
 Also note that the separate "sha1" library module is required for
 efficient digesting of strings according to SHA-1.
 
 
         Makarius
-        20-Aug-2015
+        31-Aug-2015
